Reduce email size to avoid wrapping on mobile

--- a/front/src/css/calendar.scss
+++ b/front/src/css/calendar.scss
@@ -81,6 +81,10 @@ resize: none;
 cursor: pointer;
 }
 
+#event_author_email{
+font-size: small;
+}
+
 #sortie_categories {
 max-width: 400px;
 }
